# ziglang_in_python

./: .gitignore  .pdm-python  array.zig  build.zig  hello.zig  pyproject.toml  research.md  zig_2d_array.py  zig_3d_array.py  zig_array.py  zig_hello.py
.zig-cache/o/36c14dd459b0792b781be9a6b29a5656/: bib_array.lib
.zig-cache/o/a4155f7cceae3fb9cc72540f49cd46c7/: bib_array.lib
.zig-cache/o/cd8193fe96a27137ae0595f3df1b4fc8/: bib_hello.lib
